--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>UFRBots</title>
+  <link rel="icon" type="imagem/png" href="img/favicon.png" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
-  <link href="css/mdb.min.css" rel="stylesheet">
+  <link href="css/mdb.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <style type="text/css">
     html,
     body,
@@ -54,7 +55,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
+      <a class="navbar-brand" href="#inicio" target="#">
         <strong>UFRBots</strong>
       </a>
 
@@ -70,18 +71,18 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Início
+            <a class="nav-link" href="#inicio">Início
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">Categorias</a>
+            <a class="nav-link" href="#" target="#">Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank">Área de Atuação</a>
+            <a class="nav-link" href="#" target="#">Área de Atuação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">Equipe</a>
+            <a class="nav-link" href="#" target="#">Equipe</a>
           </li>
         </ul>
 
@@ -100,7 +101,7 @@
   <!-- Navbar -->
 
   <!-- Full Page Intro -->
-  <div class="view full-page-intro" style="background-image: url('img/team2.jpg'); background-repeat: no-repeat;  background-size: cover;" >
+  <div id="inicio" class="view full-page-intro" style="background-image: url('img/profile_up.svg'); background-repeat: no-repeat;  background-size: cover;" >
 
     <!-- Mask & flexbox options-->
     <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -111,6 +112,7 @@
         <!--Grid row-->
         <div class="row wow fadeIn">
 
+          <div class="col-md-1"></div>
           <div class="col-md-3">
             <br><br>
             <img src="img/logo_home.png" alt="..." class="img-fluid" width="250px">
