--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
   <div id="inicio" class="view full-page-intro" style="background-image: url('img/profile_up.svg'); background-repeat: no-repeat;  background-size: cover;" >
 
     <!-- Mask & flexbox options-->
-    <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+    <!--<div class="mask rgba-black-light d-flex justify-content-center align-items-center">-->
+    <div class="mask d-flex justify-content-center align-items-center">
 
       <!-- Content -->
       <div class="container">
@@ -119,28 +120,17 @@
 
           </div>
           <!--Grid column-->
-          <div class="col-md-8 white-text text-center text-md-left">
+          <div class="col-md-6 white-text text-center text-md-left">
+              <br><br><br><br><br><br>
 
-            <h1 class="display-4 font-weight-bold"><br><br><br>UFRBots</h1>
-
-            <hr class="hr-light">
-
-            <h3 class="display-6 font-weight-bold">Equipe de Futebol de Robôs da UFRB</h3>
-
-            <!--<p>
-              <strong>Best & free guide of responsive web design</strong>
-            </p>
-
-            <p class="mb-4 d-none d-md-block">
-              <strong>The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and written versions
-                available. Create your own, stunning website.</strong>
-            </p>
-
-            <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-indigo btn-lg">Start free tutorial
-              <i class="fas fa-graduation-cap ml-2"></i>
-            </a>-->
+            <div class="alert rgba-black-light" role="alert">
+              <h4 class="display-4 font-weight-bold">UFRBots</h4>
+              <hr>
+              <h3 class="display-6 font-weight-bold">Equipe de Futebol de Robôs da UFRB</h3>
+            </div>
 
           </div>
+          <div class="col-md-2"></div>
           <!--Grid column-->
 
           <!--Grid column-->
