--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Mask & flexbox options-->
     <!--<div class="mask rgba-black-light d-flex justify-content-center align-items-center">-->
-    <div class="mask d-flex justify-content-center align-items-center">
+    <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
       <!-- Content -->
       <div class="container">
@@ -123,19 +123,12 @@
           <div class="col-md-6 white-text text-center text-md-left">
               <br><br><br><br><br><br>
 
-            <div class="alert rgba-black-light" role="alert">
               <h4 class="display-4 font-weight-bold">UFRBots</h4>
               <hr>
               <h3 class="display-6 font-weight-bold">Equipe de Futebol de Robôs da UFRB</h3>
-            </div>
 
           </div>
           <div class="col-md-2"></div>
-          <!--Grid column-->
-
-          <!--Grid column-->
-          
-          <!--Grid column-->
 
         </div>
         <!--Grid row-->
