--- a/index.html
+++ b/index.html
@@ -192,11 +192,12 @@
           <div class="col-md-8">
 
             <!-- Main heading -->
+            <br>
             <h3 class="display-6 font-weight-bold" align="text-center">Sobre</h3>
             <!--<h3 class="h3 mb-3">Sobre</h3>-->
             <br><br>
             <p align="justify">A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
-              Universidade Federal do Recôncavo da Bahia, em Cruz das Almas Bahia.
+              Universidade Federal do Recôncavo da Bahia, em Cruz das Almas.
               <p align="justify">A equipe oferece aos seus integrantes a oportunidade de realizar pesquisas na área de
                 Robótica e Inteligência Artificial, de maneira que os mesmos possam aplicar tais conhecimentos de forma
                 prática. Assim, fomentando a realização de novas pesquisas em robótica no Brasil.
