... algumas mudanças + área de atuação

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="#">Categorias</a>
+            <a class="nav-link" href="#categoria" target="#">Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="#">Área de Atuação</a>
+            <a class="nav-link" href="#area_atuacao" target="#">Área de Atuação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" target="#">Equipe</a>
+            <a class="nav-link" href="#contato" target="#">Contato</a>
           </li>
         </ul>
 
@@ -267,24 +267,24 @@
         <!--Section: Not enough-->
 
         <hr class="mb-5">
-        <div class="site-section section-2" id="process-section">
+        <div class="site-section section-2" id="area_atuacao">
           <div class="container">
             <div class="row">
               <div class="col-lg-6 mb-5">
-                <span class="section-sub-title d-block">Área de Atuação</span>
+                <span class="section-sub-title d-block"></span>
                 <h2 class="section-title">Área de Atuação</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam
-                  voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore
-                  molestias blanditiis consequuntur sunt nisi.</p>
+                <p></p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
                 <div class="process p-3">
-                  <span class="number">01</span>
+                  <center>
+                    <img src="img/atuacao/vision.png" alt="..." class="img-fluid center">
+                  </center>                    
                   <div>
                     <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
-                    <h3>Visão Computacional</h3>
+                    <center><h3>Visão Computacional</h3></center>
                     <p style="text-align: justify;">A visão computacional é o processo de modelagem e replicação da
                       visão humana usando software e hardware. A visão computacional estuda a reconstrução e compreenção
                       de uma cena 3d a partir de suas imagens 2d em termos das propriedades da estrutura presente na
@@ -295,10 +295,12 @@
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="process p-3">
-                  <span class="number">02</span>
+                    <center>
+                        <img src="img/atuacao/machine_learning.png" alt="..." class="img-fluid center">
+                      </center>  
                   <div>
                     <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
-                    <h3>Aprendizado de Máquina</h3>
+                    <center><h3>Aprendizado de Máquina</h3></center>
                     <p style="text-align: justify;">O aprendizado de máquina é um método de análise de dados que
                       automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na
                       ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo
@@ -309,13 +311,17 @@
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="process p-3">
-                  <span class="number">03</span>
+                    <center>
+                        <img src="img/atuacao/2d.png" alt="..." class="img-fluid center">
+                      </center>  
                   <div>
                     <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                    <h3>SImulação 2D</h3>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-                      possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia
-                      quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                    <center><h3>Simulação</h3></center>
+                    <p style="text-align: justify;">
+                      A simulação 
+                    do futebol de robôs é um ramo fundamental para a aplicação de técnicas de aprendizado 
+                    e atuação em campo de sistemas multiagente, composto pelos robôs. Do qual proporciona
+                     o estudo, aplicação e análise de resultados obtidos com uma menor taxa de esforço.</p>
                   </div>
 
                 </div>
@@ -364,7 +370,7 @@
   <!--Footer-->
   <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
-    <div class="site-section" id="contact-section">
+    <div class="site-section" id="contato">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-7">
