--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             <a class="nav-link" href="#area_atuacao" target="#">Área de Atuação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contato" target="#">Contato</a>
+            <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="#">I Seminário de Robótica</a>
           </li>
+
         </ul>
 
         <!-- Right -->
@@ -154,37 +155,18 @@
       <!--Section: Main info-->
       <section class="mt-5 wow fadeIn">
 
-        <!--Grid row-->
-        <div class="row">
 
-          <!--Grid column-->
-          <div class="col-md-4">
-            <img src="img/about.png" alt="..." class="img-fluid" width="250px">
-            <!--<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/vss1.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/simul1.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/vss2.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/simul2.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>-->
-
+                <div class="container">
+          <div class="row">
+            <div class="col-lg-6 mb-5">
+              <span class="section-sub-title d-block"></span>
+              <h2 class="section-title">Sobre</h2>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+            <img src="img/team2.jpg" alt="..." class="img-fluid" width="550px">
           </div>
           <!--Grid column-->
 
@@ -192,10 +174,10 @@
           <div class="col-md-8">
 
             <!-- Main heading -->
-            <br>
-            <h3 class="display-6 font-weight-bold" align="text-center">Sobre</h3>
+            <!-- <br> -->
+            <!-- <h3 class="display-6 font-weight-bold" align="text-center">Sobre</h3> -->
             <!--<h3 class="h3 mb-3">Sobre</h3>-->
-            <br><br>
+            <!-- <br><br> -->
             <p align="justify">A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
               Universidade Federal do Recôncavo da Bahia, em Cruz das Almas.
               <p align="justify">A equipe oferece aos seus integrantes a oportunidade de realizar pesquisas na área de
@@ -204,10 +186,12 @@
               </p>
 
           </div>
-          <!--Grid column-->
+              
+            </div>
+          </div>
 
         </div>
-        <!--Grid row-->
+
 
       </section>
       <!--Section: Main info-->
@@ -216,11 +200,11 @@
 
       <!--Section: Main features & Quick Start-->
 
-      <div class="site-section section-2" id="work-section">
+      <div class="site-section section-2" id="categoria">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 mb-5">
-              <span class="section-sub-title d-block">Categorias</span>
+              <span class="section-sub-title d-block"></span>
               <h2 class="section-title">Categorias</h2>
             </div>
           </div>
@@ -234,20 +218,38 @@
                     href="#list-simul" role="tab" aria-controls="simulation">Simulation 2D</a>
                 </div>
               </div>
-              <div class="col-8">
+              <div class="col-9">
                 <div class="tab-content" id="nav-tabContent">
                   <div class="tab-pane fade show active" id="list-vss" role="tabpanel" aria-labelledby="list-home-list"
-                    style="text-align: justify;">Esta categoria se trata de uma competição de futebol de robôs presente
-                    em competições, como: Competição Brasileira de Robótica (CBR) e a Competição Latino-Americana de
-                    Robótica (LARC). Nesta categoria dois times teleoperados de três robôs se enfrentam em uma partida
-                    de futebol, utilizando técnicas de Visão Computacional e Aprendizado de máquina para superar seu
-                    adversário.</div>
+                    style="text-align: justify;">
+                    <div class="row">
+                      <div class="col-5">
+                           <img class="card-img-top" src="img/vss1.jpg" alt="...">
+                      </div>
+                    <div class="col-7">
+                      Esta categoria se trata de uma competição de futebol de robôs presente
+                      em competições, como: Competição Brasileira de Robótica (CBR) e a Competição Latino-Americana de
+                      Robótica (LARC). Nesta categoria dois times teleoperados de três robôs se enfrentam em uma partida
+                      de futebol, utilizando técnicas de Visão Computacional e Aprendizado de máquina para superar seu
+                      adversário.
+                    </div>
+                    </div>
+                  </div>
                   <div class="tab-pane fade" id="list-simul" role="tabpanel" aria-labelledby="list-profile-list"
-                    style="text-align: justify;">A Simulação 2D é uma das mais antigas categorias presentes na
+                    style="text-align: justify;">
+                    <div class="row">
+                      <div class="col-5">
+                           <img class="card-img-top" src="img/simul1.jpg" alt="...">
+                      </div>
+                    <div class="col-7">
+                    A Simulação 2D é uma das mais antigas categorias presentes na
                     RoboCupSoccer. A Liga de Simulação usa uma exibição de vídeo para rodar jogos de futebol sem o uso
                     de robôs reais, assemelhando-se a um videogame. As competições da Liga de Simulação apresentam em
                     geral jogos de futebol competitivos, onde sistemas de Inteligência Artificial usam estratégias
-                    sofisticadas para superar seu oponente.</div>
+                    sofisticadas para superar seu oponente.
+                    </div>
+                    </div>
+                    </div>
                 </div>
               </div>
             </div>
@@ -258,10 +260,6 @@
 
         <hr class="my-5">
 
-
-
-
-
         <!--Section: Not enough-->
 
         <!--Section: Not enough-->
@@ -271,17 +269,17 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 mb-5">
-                <span class="section-sub-title d-block"></span>
+                <span class="section-sub-title d-block">Área de Atuação</span>
                 <h2 class="section-title">Área de Atuação</h2>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam
+                  voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore
+                  molestias blanditiis consequuntur sunt nisi.</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
                 <div class="process p-3">
-                  <center>
-                    <img src="img/atuacao/vision.png" alt="..." class="img-fluid center">
-                  </center>                    
+                  <span class="number">01</span>
                   <div>
                     <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
                     <center><h3>Visão Computacional</h3></center>
@@ -295,9 +293,7 @@
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="process p-3">
-                    <center>
-                        <img src="img/atuacao/machine_learning.png" alt="..." class="img-fluid center">
-                      </center>  
+                  <span class="number">02</span>
                   <div>
                     <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
                     <center><h3>Aprendizado de Máquina</h3></center>
@@ -311,17 +307,13 @@
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="process p-3">
-                    <center>
-                        <img src="img/atuacao/2d.png" alt="..." class="img-fluid center">
-                      </center>  
+                  <span class="number">03</span>
                   <div>
                     <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                    <center><h3>Simulação</h3></center>
-                    <p style="text-align: justify;">
-                      A simulação 
-                    do futebol de robôs é um ramo fundamental para a aplicação de técnicas de aprendizado 
-                    e atuação em campo de sistemas multiagente, composto pelos robôs. Do qual proporciona
-                     o estudo, aplicação e análise de resultados obtidos com uma menor taxa de esforço.</p>
+                    <h3>SImulação 2D</h3>
+                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+                      possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia
+                      quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                   </div>
 
                 </div>
