--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#inicio" target="#">
+      <a class="navbar-brand" href="#inicio">
         <strong>UFRBots</strong>
       </a>
 
@@ -79,13 +79,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#categoria" target="#">Categorias</a>
+            <a class="nav-link" href="#categoria" >Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#area_atuacao" target="#">Área de Atuação</a>
+            <a class="nav-link" href="#area_atuacao" >Área de Atuação</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="#">I Seminário de Robótica</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contato" >Contato</a>
           </li>
 
         </ul>
@@ -269,17 +272,19 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 mb-5">
-                <span class="section-sub-title d-block">Área de Atuação</span>
+                <span class="section-sub-title d-block"></span>
+              <div class="col-lg-12 mb-2">
                 <h2 class="section-title">Área de Atuação</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam
-                  voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore
-                  molestias blanditiis consequuntur sunt nisi.</p>
+                <p></p>
+                <p style="text-align: justify;">O futebol de robô caracteriza-se pelo estudo e aplicação de conhecimentos multidisciplinares, destacando-se as seguintes áreas:</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
                 <div class="process p-3">
-                  <span class="number">01</span>
+                  <center>
+                    <img src="img/atuacao/vision.png" alt="..." class="img-fluid center">
+                  </center>                    
                   <div>
                     <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
                     <center><h3>Visão Computacional</h3></center>
@@ -288,12 +293,13 @@
                       de uma cena 3d a partir de suas imagens 2d em termos das propriedades da estrutura presente na
                       cena.</p>
                   </div>
-
                 </div>
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="process p-3">
-                  <span class="number">02</span>
+                    <center>
+                        <img src="img/atuacao/machine_learning.png" alt="..." class="img-fluid center">
+                      </center>  
                   <div>
                     <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
                     <center><h3>Aprendizado de Máquina</h3></center>
@@ -302,18 +308,18 @@
                       ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo
                       de intervenção humana.</p>
                   </div>
-
                 </div>
               </div>
               <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="process p-3">
-                  <span class="number">03</span>
+                    <center>
+                        <img src="img/atuacao/controle.png" alt="..." class="img-fluid center">
+                      </center>  
                   <div>
                     <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                    <h3>SImulação 2D</h3>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-                      possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia
-                      quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                    <center><h3>Controle</h3></center>
+                    <p style="text-align: justify;">
+                     O futebol de robô emprega conceitos de eletrônica, elétrica e mecânica, integrando-os na construção de sistemas físicos.</p>
                   </div>
 
                 </div>
