--- a/index.html
+++ b/index.html
@@ -73,22 +73,23 @@
 
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="#inicio">Início
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#categoria" >Categorias</a>
+            <a class="nav-link" href="#categoria">Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#area_atuacao" >Área de Atuação</a>
+            <a class="nav-link" href="#area_atuacao">Área de Atuação</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="_blank">I Seminário de
+              Robótica</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="#">I Seminário de Robótica</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contato" >Contato</a>
+            <a class="nav-link" href="#contato">Contato</a>
           </li>
 
         </ul>
@@ -159,7 +160,7 @@
       <section class="mt-5 wow fadeIn">
 
 
-                <div class="container">
+        <div class="container">
           <div class="row">
             <div class="col-lg-6 mb-5">
               <span class="section-sub-title d-block"></span>
@@ -169,27 +170,29 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-            <img src="img/team2.jpg" alt="..." class="img-fluid" width="550px">
-          </div>
-          <!--Grid column-->
+                <img src="img/team2.jpg" alt="..." class="img-fluid" width="550px">
+              </div>
+              <!--Grid column-->
 
-          <!--Grid column-->
-          <div class="col-md-8">
+              <!--Grid column-->
+              <div class="col-md-8">
 
-            <!-- Main heading -->
-            <!-- <br> -->
-            <!-- <h3 class="display-6 font-weight-bold" align="text-center">Sobre</h3> -->
-            <!--<h3 class="h3 mb-3">Sobre</h3>-->
-            <!-- <br><br> -->
-            <p align="justify">A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
-              Universidade Federal do Recôncavo da Bahia, em Cruz das Almas.
-              <p align="justify">A equipe oferece aos seus integrantes a oportunidade de realizar pesquisas na área de
-                Robótica e Inteligência Artificial, de maneira que os mesmos possam aplicar tais conhecimentos de forma
-                prática. Assim, fomentando a realização de novas pesquisas em robótica no Brasil.
-              </p>
+                <!-- Main heading -->
+                <!-- <br> -->
+                <!-- <h3 class="display-6 font-weight-bold" align="text-center">Sobre</h3> -->
+                <!--<h3 class="h3 mb-3">Sobre</h3>-->
+                <!-- <br><br> -->
+                <p align="justify">A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
+                  Universidade Federal do Recôncavo da Bahia, em Cruz das Almas.
+                  <p align="justify">A equipe oferece aos seus integrantes a oportunidade de realizar pesquisas na área
+                    de
+                    Robótica e Inteligência Artificial, de maneira que os mesmos possam aplicar tais conhecimentos de
+                    forma
+                    prática. Assim, fomentando a realização de novas pesquisas em robótica no Brasil.
+                  </p>
 
-          </div>
-              
+              </div>
+
             </div>
           </div>
 
@@ -205,63 +208,73 @@
 
       <div class="site-section section-2" id="categoria">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 mb-5">
-              <span class="section-sub-title d-block"></span>
-              <h2 class="section-title">Categorias</h2>
-            </div>
+
+
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 mb-5">
+            <span class="section-sub-title d-block"></span>
+            <h2 class="section-title">Categorias</h2>
           </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-3">
-                <div class="list-group" id="list-tab" role="tablist">
-                  <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list"
-                    href="#list-vss" role="tab" aria-controls="vss">Very Small Size</a>
-                  <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"
-                    href="#list-simul" role="tab" aria-controls="simulation">Simulation 2D</a>
-                </div>
-              </div>
-              <div class="col-9">
-                <div class="tab-content" id="nav-tabContent">
-                  <div class="tab-pane fade show active" id="list-vss" role="tabpanel" aria-labelledby="list-home-list"
-                    style="text-align: justify;">
-                    <div class="row">
-                      <div class="col-5">
-                           <img class="card-img-top" src="img/vss1.jpg" alt="...">
-                      </div>
-                    <div class="col-7">
-                      Esta categoria se trata de uma competição de futebol de robôs presente
-                      em competições, como: Competição Brasileira de Robótica (CBR) e a Competição Latino-Americana de
-                      Robótica (LARC). Nesta categoria dois times teleoperados de três robôs se enfrentam em uma partida
-                      de futebol, utilizando técnicas de Visão Computacional e Aprendizado de máquina para superar seu
-                      adversário.
-                    </div>
-                    </div>
+        </div>
+
+        <div class="container">
+
+              <div class="container">
+                  <div class="row">
+
+                        <div class="col-md 6" data-aos="fade-up" data-aos-delay="">
+                          <div class="process p-3">
+                            <center>
+                              <img src="img/simul1.jpg" alt="..." class="img-fluid center" width="278" height="220">
+                            </center>
+                            <div>
+                              <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
+                              <center>
+                                <h3>Simulação 2D</h3>
+                              </center>
+                              <p style="text-align: justify;">
+                                  A Simulação 2D é uma das mais antigas categorias presentes na
+                                  RoboCupSoccer. A Liga de Simulação usa uma exibição de vídeo para rodar jogos de futebol sem o
+                                  uso
+                                  de robôs reais, assemelhando-se a um videogame. As competições da Liga de Simulação apresentam
+                                  em
+                                  geral jogos de futebol competitivos, onde sistemas de Inteligência Artificial usam estratégias
+                                  sofisticadas para superar seu oponente.  
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+
+                          <div class="col-md 6" data-aos="fade-up" data-aos-delay="">
+                            <div class="process p-3">
+                              <center>
+                                <img src="img/vss1.jpg"  alt="..." class="img-fluid center" width="300" height="200">
+                              </center>
+                              <div>
+                                <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
+                                <center>
+                                  <h3>Very Small Size</h3>
+                                </center>
+                                <p style="text-align: justify;">
+                                    Esta categoria se trata de uma competição de futebol de robôs presente
+                                    em competições, como: Competição Brasileira de Robótica (CBR) e a Competição Latino-Americana de
+                                    Robótica (LARC). Nesta categoria dois times teleoperados de três robôs se enfrentam em uma
+                                    partida
+                                    de futebol, utilizando técnicas de Visão Computacional e Aprendizado de máquina para superar seu
+                                    adversário.  
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+
                   </div>
-                  <div class="tab-pane fade" id="list-simul" role="tabpanel" aria-labelledby="list-profile-list"
-                    style="text-align: justify;">
-                    <div class="row">
-                      <div class="col-5">
-                           <img class="card-img-top" src="img/simul1.jpg" alt="...">
-                      </div>
-                    <div class="col-7">
-                    A Simulação 2D é uma das mais antigas categorias presentes na
-                    RoboCupSoccer. A Liga de Simulação usa uma exibição de vídeo para rodar jogos de futebol sem o uso
-                    de robôs reais, assemelhando-se a um videogame. As competições da Liga de Simulação apresentam em
-                    geral jogos de futebol competitivos, onde sistemas de Inteligência Artificial usam estratégias
-                    sofisticadas para superar seu oponente.
-                    </div>
-                    </div>
-                    </div>
                 </div>
-              </div>
-            </div>
-          </div>
 
         </div>
 
 
-        <hr class="my-5">
 
         <!--Section: Not enough-->
 
@@ -273,70 +286,81 @@
             <div class="row">
               <div class="col-lg-6 mb-5">
                 <span class="section-sub-title d-block"></span>
-              <div class="col-lg-12 mb-2">
-                <h2 class="section-title">Área de Atuação</h2>
-                <p></p>
-                <p style="text-align: justify;">O futebol de robô caracteriza-se pelo estudo e aplicação de conhecimentos multidisciplinares, destacando-se as seguintes áreas:</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
-                <div class="process p-3">
-                  <center>
-                    <img src="img/atuacao/vision.png" alt="..." class="img-fluid center">
-                  </center>                    
-                  <div>
-                    <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
-                    <center><h3>Visão Computacional</h3></center>
-                    <p style="text-align: justify;">A visão computacional é o processo de modelagem e replicação da
-                      visão humana usando software e hardware. A visão computacional estuda a reconstrução e compreenção
-                      de uma cena 3d a partir de suas imagens 2d em termos das propriedades da estrutura presente na
-                      cena.</p>
-                  </div>
+                <div class="col-lg-12 mb-2">
+                  <h2 class="section-title">Área de Atuação</h2>
+                  <p></p>
+                  <p style="text-align: justify;">O futebol de robô caracteriza-se pelo estudo e aplicação de
+                    conhecimentos multidisciplinares, destacando-se as seguintes áreas:</p>
                 </div>
               </div>
-              <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                <div class="process p-3">
+              <div class="row">
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
+                  <div class="process p-3">
                     <center>
-                        <img src="img/atuacao/machine_learning.png" alt="..." class="img-fluid center">
-                      </center>  
-                  <div>
-                    <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
-                    <center><h3>Aprendizado de Máquina</h3></center>
-                    <p style="text-align: justify;">O aprendizado de máquina é um método de análise de dados que
-                      automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na
-                      ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o mínimo
-                      de intervenção humana.</p>
+                      <img src="img/atuacao/vision.png" alt="..." class="img-fluid center">
+                    </center>
+                    <div>
+                      <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
+                      <center>
+                        <h3>Visão Computacional</h3>
+                      </center>
+                      <p style="text-align: justify;">A visão computacional é o processo de modelagem e replicação da
+                        visão humana usando software e hardware. A visão computacional estuda a reconstrução e
+                        compreenção
+                        de uma cena 3d a partir de suas imagens 2d em termos das propriedades da estrutura presente na
+                        cena.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="process p-3">
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                  <div class="process p-3">
                     <center>
-                        <img src="img/atuacao/controle.png" alt="..." class="img-fluid center">
-                      </center>  
-                  <div>
-                    <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                    <center><h3>Controle</h3></center>
-                    <p style="text-align: justify;">
-                     O futebol de robô emprega conceitos de eletrônica, elétrica e mecânica, integrando-os na construção de sistemas físicos.</p>
+                      <img src="img/atuacao/machine_learning.png" alt="..." class="img-fluid center">
+                    </center>
+                    <div>
+                      <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
+                      <center>
+                        <h3>Aprendizado de Máquina</h3>
+                      </center>
+                      <p style="text-align: justify;">O aprendizado de máquina é um método de análise de dados que
+                        automatiza a construção de modelos analíticos. É um ramo da inteligência artificial baseado na
+                        ideia de que sistemas podem aprender com dados, identificar padrões e tomar decisões com o
+                        mínimo
+                        de intervenção humana.</p>
+                    </div>
                   </div>
+                </div>
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                  <div class="process p-3">
+                    <center>
+                      <img src="img/atuacao/controle.png" alt="..." class="img-fluid center">
+                    </center>
+                    <div>
+                      <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
+                      <center>
+                        <h3>Controle</h3>
+                      </center>
+                      <p style="text-align: justify;">
+                        O futebol de robô emprega conceitos de eletrônica, elétrica e mecânica, integrando-os na
+                        construção de sistemas físicos.</p>
+                    </div>
 
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <!--Section: More-->
+
         </div>
-
-        <!--Section: More-->
-
-      </div>
   </main>
   <!--Main layout-->
 
 
   <!-- PARCEIROS -->
   <section>
+    <hr class="mb-5">
     <h2 class="my-5 h3 text-center">Parceiros</h2>
     <div class="container">
       <div class="row">
@@ -372,6 +396,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-7">
+            <br><br>
             <h2 class="section-title mb-3">Contato</h2>
             <p class="mb-5">Entre em contato conosco!</p>
             <form method="post" data-aos="fade">
@@ -395,8 +420,9 @@
                 </div>
               </div>
               <div class="form-group row justify-content-end">
-                <div class="col-5 ">
-                  <input type="submit" class="btn btn-primary py-3 px-5 btn-block" value="Enviar Mensagem">
+                <div class="col-5">
+                  <!--<input type="submit" class="btn btn-primary py-3 px-5 btn-block" value="Enviar Mensagem">-->
+                  <button type="button" class="btn btn-dark">Enviar Mensagem</button>
                 </div>
               </div>
             </form>
