--- a/evento/campeonato.html
+++ b/evento/campeonato.html
@@ -58,7 +58,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="">
+      <a class="navbar-brand" href="../index.html">
         <strong>UFRBots</strong>
       </a>
 
