--- a/evento.html
+++ b/evento.html
@@ -58,7 +58,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#inicio">
+      <a class="navbar-brand" href="index.html">
         <strong>UFRBots</strong>
       </a>
 
