--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link" href="#area_atuacao">Área de Atuação</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="evento.html" target="_blank">I Seminário de
+            <a class="nav-link" href="evento.html">I Seminário de
               Robótica</a>
           </li>
           <li class="nav-item">
