--- a/evento.html
+++ b/evento.html
@@ -85,16 +85,16 @@
             <a class="nav-link" href="evento/palestra.html">Palestras</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="evento/sessao.html" target="_blank">Sessões Técnicas</a>
+            <a class="nav-link" href="evento/sessao.html">Sessões Técnicas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="evento/minicurso.html" target="_blank">Mini-Curso</a>
+            <a class="nav-link" href="evento/minicurso.html">Mini-Curso</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="evento/inscricao.html" target="_blank">Inscrição</a>
+            <a class="nav-link" href="evento/inscricao.html">Inscrição</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="evento/campeonato.html" target="_blank">Campeonato 2D</a>
+            <a class="nav-link" href="evento/campeonato.html">Campeonato 2D</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contato">Contato</a>
