--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/modal.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="css/mdb.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
@@ -170,7 +171,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/team2.jpg" alt="..." class="img-fluid" width="550px">
+                <img id="team_ufrbots" src="img/team2.jpg" alt="Equipe UFRBots" style="width:100%;max-width:300px">
               </div>
               <!--Grid column-->
 
@@ -431,6 +432,22 @@
       </div>
     </div>
   </footer>
+
+  <!-- Modal para foto do time -->
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close">&times;</span>
+
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
+
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+  </div>
+
+
   <!--/.Footer-->
 
 
@@ -443,6 +460,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/modal.js"></script>
   <!-- Initializations -->
   <script type="text/javascript">
     // Animations initialization
