--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <a class="nav-link" href="#area_atuacao">Área de Atuação</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="evento.html">I Seminário de
+            <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="_blank">I Seminário de
               Robótica</a>
           </li>
           <li class="nav-item">
