páginas de categorias

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-md-4">
-                <img id="team_ufrbots" src="img/team2.jpg" alt="Equipe UFRBots" style="width:100%;max-width:300px">
+              <div class="col-md-6">
+                <img id="team_ufrbots" src="img/team2.jpg" alt="Equipe UFRBots" style="width:100%;max-width:100%">
               </div>
               
-              <div class="col-md-8">
+              <div class="col-md-6">
 
-                <p align="justify">A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
+                <p align="justify"><br><br>A Ufrbots, é uma equipe de futebol de robôs formada por estudantes de gradução da
                   Universidade Federal do Recôncavo da Bahia, em Cruz das Almas.
                   <p align="justify">A equipe oferece aos seus integrantes a oportunidade de realizar pesquisas na área
                     de
@@ -221,7 +221,7 @@
                         <div class="col-md 6" data-aos="fade-up" data-aos-delay="">
                           <div class="process p-3">
                             <center>
-                              <img src="img/simul1.jpg" alt="..." class="img-fluid center" width="278" height="220">
+                              <img src="img/simul1.jpg" alt="..." class="img-fluid center" width="260" height="200">
                             </center>
                             <div>
                               <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
@@ -237,6 +237,9 @@
                                   geral jogos de futebol competitivos, onde sistemas de Inteligência Artificial usam estratégias
                                   sofisticadas para superar seu oponente.  
                               </p>
+                              <center>
+                                <a href="2d.html" class="btn btn-light">Ver Categoria</a>
+                              </center>                              
                             </div>
                           </div>
                         </div>
@@ -259,6 +262,10 @@
                                     de futebol, utilizando técnicas de Visão Computacional e Aprendizado de máquina para superar seu
                                     adversário.  
                                 </p>
+                                <br>
+                                <center>
+                                  <a href="vss.html" class="btn btn-light">Ver Categoria</a>
+                                </center>                                
                               </div>
                             </div>
                           </div>
