--- a/index.html
+++ b/index.html
@@ -85,8 +85,15 @@
           <li class="nav-item">
             <a class="nav-link" href="#area_atuacao">Área de Atuação</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#projetos">Projetos</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Projetos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="projeto_extensao.html">Projeto de Extensão</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="projeto_pesquisa.html">Projeto de Pesquisa</a>
+            </div>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="https://www3.ufrb.edu.br/eventos/ufrbots/" target="_blank">I Seminário de
@@ -332,11 +339,10 @@
           </div>
         </div>
 
-        <hr class="mb-5" id="projetos">
+        <!--<hr class="mb-5" id="projetos">
         <div class="site-section section-2">
         <div class="container" >
           <br><br><br><br>
-          <!--Section: Main info-->
           <section class="mt-5 wow fadeIn">
             <div class="container">
               <div class="row">
@@ -365,19 +371,14 @@
                 
                 <h4>Projetos de Pesquisa</h4>                
                 <div class="row">
-                  <!-- <div class="col-md-6">
-                    <img id="team_ufrbots" src="img/team2.jpg" alt="Equipe UFRBots" style="width:100%;max-width:100%">
-                  </div> -->
-                  <!-- <div class="col-md-6"> -->
                       <p align="justify">
                           Apresentação do projeto de pesquisa..
                       </p>
-                  <!-- </div> -->
                 </div>
               </div>
               </div>
             </div>
-            </section>
+            </section>-->
 
       </main>
   <!--Main layout-->
