--- a/projeto_pesquisa.html
+++ b/projeto_pesquisa.html
@@ -75,15 +75,15 @@
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#inicio">Início
+            <a class="nav-link" href="index.html#inicio">Início
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#categoria">Categorias</a>
+            <a class="nav-link" href="index.html#categoria">Categorias</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#area_atuacao">Área de Atuação</a>
+            <a class="nav-link" href="index.html#area_atuacao">Área de Atuação</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -100,7 +100,7 @@
               Robótica</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contato">Contato</a>
+            <a class="nav-link" href="index.html#contato">Contato</a>
           </li>
         </ul>
 
