retirando logo da robocup

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <img src="img/proext.jpg" class="img-responsive pull-left" width="150px">
           </a>
         </div>
-        <div class="col-xl-3 col-md-6 mb-4">
+        <!-- <div class="col-xl-3 col-md-6 mb-4">
           <a href="http://robocup.org.br/" class="nav-link" target="_blank">
             <img src="img/robocup1.png" class="img-responsive pull-left" width="140px">
           </a>
@@ -409,7 +409,7 @@
           <a href="https://www.robocup.org" class="nav-link" target="_blank">
             <img src="img/robocup2.png" class="img-responsive pull-left" width="120px">
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
