--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
     <h2 class="my-5 h3 text-center">Parceiros</h2>
     <div class="container">
       <div class="row">
+          <div class="col-xl-3 col-md-6 mb-4"></div>
         <div class="col-xl-3 col-md-6 mb-4">
           <a href="https://ufrb.edu.br/portal/" class="nav-link" target="_blank">
             <img src="img/ufrb.png" class="img-responsive pull-left" width="130px">
